@@ -25,6 +25,7 @@ autogenargs='--enable-maintainer-mode --disable-static --disable-gtk-doc'
 os.environ['INSTALL'] = os.path.expanduser('~/bin/install-check')
 
 #branches['libglade'] = 'libglade-gobject-support-branch'
+module_autogenargs['gnome-vfs'] = autogenargs + ' --enable-hal'
 module_autogenargs['gimp'] = autogenargs + ' --disable-print --enable-python'
 module_autogenargs['planner'] = autogenargs + ' --enable-database'
 
