@@ -39,6 +39,15 @@
     </dependencies>
   </cvsmodule>
 
+  <cvsmodule id="pycairo" cvsroot="cairo.freedesktop.org">
+    <dependencies>
+      <dep package="cairo"/>
+    </dependencies>
+    <suggests>
+      <dep package="gnome-python/pygtk"/>
+    </suggests>
+  </cvsmodule>
+
   <cvsmodule id="dbus" cvsroot="dbus.freedesktop.org" supports-non-srcdir-builds="no"/>
 
   <cvsmodule id="hal" cvsroot="hal.freedesktop.org">
