@@ -138,7 +138,7 @@
       <dep package="gnome-common" />
     </dependencies>
   </cvsmodule>
-  <cvsmodule id="gconf">
+  <cvsmodule id="gconf" revision="gnome-2-8">
     <dependencies>
       <dep package="ORBit2" />
       <dep package="libxml2" />
@@ -1107,17 +1107,14 @@
       <dep package="libgnomeprintui" />
     </dependencies>
   </cvsmodule>
-  <cvsmodule id="gnome-netstatus">
+  <cvsmodule id="gnome-netstatus" revision="gnome-2-8">
     <dependencies>
       <dep package="libgnomeui" />
       <dep package="gnome-panel" />
     </dependencies>
   </cvsmodule>
-  <cvsmodule id="xml2po" module="gnome-doc-utils/xml2po" checkoutdir="xml2po">
-  </cvsmodule>
   <cvsmodule id="gnome-doc-utils">
     <dependencies>
-      <dep package="xml2po" />
       <dep package="libxslt" />
     </dependencies>
   </cvsmodule>
