@@ -1,3 +1,14 @@
+2004-11-30  James Henstridge  <james@jamesh.id.au>
+
+	* modulesets/freedesktop.modules (pycairo): add an entry for
+	pycairo.
+
+	* jhbuild/config.py (addpath): change logic to remove duplicate
+	directories from the path variable.
+
+	* modulesets/gnome28.modules (gconf): use gnome-2-8 branch.
+	(gnome-netstatus): use gnome-2-8 branch.
+
 2004-11-26  James Henstridge  <james@jamesh.id.au>
 
 	* doc/jhbuild.xml: update documentation.
